Update visual hierachy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#162057">
 
     <link href="modules/material-bootstrap/bootstrap-material-design.min.css" rel="stylesheet"> 
-    <link  href="https://fonts.googleapis.com/css?family=Nunito:400,600,700|Material+Icons" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700|Material+Icons" rel="stylesheet" >
     <link href="modules/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
     
     <link  href="styles.css" rel="stylesheet">
@@ -100,6 +100,12 @@
                 <a class="list-group-item" href="#/usuarios">
                     <i class="material-icons">people</i>
                     Usuarios
+                </a>
+            </li>
+            <li>
+                <a class="list-group-item" href="#/eficiencia">
+                    <i class="material-icons">trending_up</i>
+                    Eficiencia
                 </a>
             </li>
         </ul>
